# multi-tenant-ai

./: .env.example  .gitignore  README.md  implementation_plan.md  pyproject.toml  test_db.py
app/: config.py  main.py
app/api/: __init__.py  admin.py  chat.py  dashboard.py  ingest.py
app/core/: __init__.py  llm.py  memory.py  pipeline.py
app/db/: __init__.py  crud.py  database.py  models.py  schemas.py
app/ingestion/: __init__.py  chunker.py  embedder.py  processor.py
app/mcp_servers/: __init__.py  client.py  rag_server.py  tools_server.py
app/orchestrator/: __init__.py  graph.py  state.py
app/orchestrator/nodes/: __init__.py  generate.py  guardrail.py  memory_nodes.py  preprocess.py  rag.py  supervisor.py  tools.py
app/retrieval/: __init__.py  bm25.py  hybrid_search.py  qdrant_client.py  reranker.py
dashboard/: index.html
data/: .gitkeep
