[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-tenant-ai"
version = "0.1.0"
description = "Scalable multi-tenant AI system — Web Chat + RAG + LangGraph + MCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # ── Web Framework ─────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",          # File upload support
    "httpx>=0.27.0",                      # Async HTTP client

    # ── Config & Validation ───────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # ── Database (SQLite async — zero setup) ──────────────────────
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",                    # DB migrations (for later)

    # ── LLM Orchestration ─────────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",      # Gemini integration
    "langchain-core>=0.3.0",

    # ── MCP (Model Context Protocol) ─────────────────────────────
    "mcp>=1.0.0",                         # Anthropic MCP Python SDK
    "langchain-mcp-adapters>=0.1.0",      # LangGraph ↔ MCP bridge

    # ── Vector Store (local, no server needed) ────────────────────
    "qdrant-client>=1.9.0",

    # ── Local Embeddings & Reranker (free, runs on CPU) ───────────
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",                       # Required by sentence-transformers
    "einops>=0.8.0",                      # Required by nomic-embed-text

    # ── Document Parsing ──────────────────────────────────────────
    "docling>=2.0.0",                     # PDF, DOCX, XLSX, HTML → Markdown

    # ── Document utils ────────────────────────────────────────────
    "openpyxl>=3.1.0",                    # Excel file support
    "pillow>=10.0.0",                     # Image handling

    # ── Session Memory ────────────────────────────────────────────
    "cachetools>=5.3.0",                  # TTLCache for in-memory sessions

    # ── Logging ───────────────────────────────────────────────────
    "loguru>=0.7.0",

    # ── Utilities ────────────────────────────────────────────────
    "python-dateutil>=2.9.0",
    "tenacity>=8.3.0",                    # Retry logic
    "rich>=13.0.0",                       # Pretty console output
]

[project.optional-dependencies]
# ── Speech-to-Text (adds ~1GB for model download on first run) ──
multimodal = [
    "openai-whisper>=20231117",           # Local Whisper (runs on CPU, no API key)
    "ffmpeg-python>=0.2.0",              # Required by Whisper
]

# ── Evaluation (Phase 8) ────────────────────────────────────────
eval = [
    "ragas>=0.1.14",                      # RAG faithfulness/relevance/correctness
    "datasets>=2.20.0",                   # HuggingFace datasets for eval sets
]

# ── Development ─────────────────────────────────────────────────
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",                      # TestClient for FastAPI
    "ruff>=0.4.0",                        # Linter + formatter
    "mypy>=1.10.0",                       # Type checking
]

[project.scripts]
start = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── Ruff (linter + formatter) ────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.isort]
known-first-party = ["app"]

# ── Pytest ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

# ── MyPy ─────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
